# easy-harness

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  NOTICE  README.md  SECURITY.md  index.html  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  new-tool.yml
.github/scripts/: windows-probe.ps1
.github/workflows/: ci.yml  release.yml  windows-smoke.yml
.gstack/: browse-audit.jsonl  claude-available.json
_workspace/2026-07-05-001/: 01_input.txt  final.md
design/: DECISION.md  README.md  brief.md  design-system.md  generation-log.md  tokens.json
recipes-bundle/: recipes-bundle.json  recipes-bundle.json.sig
remotion-demo/: package.json
remotion-demo/src/: Composition.tsx  Root.tsx  index.css  theme.ts
scripts/: build_recipes_bundle.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/recipes/: bun.json  claude-code.json  codex.json  gajaecode.json  hermes.json  im-not-ai.json  insane-search.json  k-skill.json  korean-law-mcp.json  lazycodex.json  mock-tool.json  nodejs-lts.json  openclaw.json  opencode.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  probe.rs  state.rs
src-tauri/src/recipe/: loader.rs  mod.rs  plan.rs  remote.rs  schema.rs  signing.rs
src-tauri/src/runner/: diagnostics.rs  download.rs  dry_run.rs  error_hints.rs  events.rs  mod.rs  process.rs  pty.rs  secrets.rs  step_runner.rs
src-tauri/tests/: real_recipes.rs
src-tauri/tests/fixtures/recipes/: mock-plugin.json  mock-prereq.json  mock-tool.json
src/components/: AppShell.tsx  AuthGuidePanel.tsx  Badge.tsx  Buttons.tsx  ErrorPanel.tsx  LogPanel.tsx  MascotBubble.tsx  SecretForm.tsx  TerminalPanel.tsx  (+3 more)
video/: package.json  tsconfig.json
web/: index.html  package.json  tsconfig.json  vercel.json
(+91 files in other folders)
