[package]
name = "easy-harness"
version = "0.1.0"
# sign_recipes 개발용 bin이 추가되면서 cargo run 대상이 모호해짐. 앱 바이너리를 기본으로 지정
default-run = "easy-harness"
description = "비개발자를 위한 AI 코딩 도구 설치 도우미, 이지 하네스"
authors = ["needslab <hello@needslab.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "easy_harness_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# 개발용 bin(scan_secrets·sign_recipes)을 배포 앱 번들에서 제외하기 위한 게이트.
# tauri build는 이 feature 없이 빌드하므로 두 bin이 .app에 딸려 들어가지 않는다.
# 두 bin을 빌드·테스트·실행하려면 --features dev-tools를 준다.
dev-tools = []

# 개발용 bin 2종. required-features로 묶어 기본 빌드(=tauri build)에서 빠진다.
[[bin]]
name = "scan_secrets"
path = "src/bin/scan_secrets.rs"
required-features = ["dev-tools"]

[[bin]]
name = "sign_recipes"
path = "src/bin/sign_recipes.rs"
required-features = ["dev-tools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "rt", "sync", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
futures-util = "0.3"
portable-pty = "0.9"
zip = { version = "8", default-features = false, features = ["deflate"] }
ed25519-dalek = "2.2"
base64 = "0.22"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
